--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <title>照片库</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="photo.css">
 </head>
 <body> 
+	<div id="container" class="album"></div>
 
+<script type="text/javascript" src="photo.js"></script>
 <script type="text/javascript" src="main.js"></script>
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="0" height="0">
+   <clipPath id="clip1" clipPathUnits="objectBoundingBox">
+    <polygon points="0 0,1 0,0.5 1,0 1">
+    </polygon>
+  </clipPath>
+  <clipPath id="clip2" clipPathUnits="objectBoundingBox">
+    <polygon points="0.2 0,1 0,1 1,0.5 1">
+    </polygon>
+  </clipPath>
+</svg> 
 </body>
 </html>
