--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" type="text/css" href="photo.css">
 </head>
 <body> 
+	<button id="btn1">拼图</button>
+	<button id="btn2">瀑布流</button>
+	<button id="btn3">木桶</button>
 	<div id="container" class="album"></div>
 
 <script type="text/javascript" src="photo.js"></script>
